...
    <string name="location_security_error">Errore di sicurezza nell\'accesso alla posizione.</string>
    <string name="your_location_marker">La tua posizione</string>
    <string name="gps_disabled_message">Il GPS è stato disattivato.</string>
    <string name="harsh_movement_detected">Movimento brusco rilevato!</string>


    <string name="login_failed_format">Login fallito: %s</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="link_register">Non hai un account? Registrati</string>
    <string name="link_forgot_password">Password dimenticata?</string>
    <string name="login_screen_title">Accesso all\'account</string>
...
